--- a/data/drivers/verstappen.json
+++ b/data/drivers/verstappen.json
@@ -1,11 +1,12 @@
 {
   "name": "Max Verstappen",
   "team": "Red Bull",
-  "aggression": 0.9,
-  "tire_management": 0.7,
-  "fuel_saving": 0.6,
-  "wet_skill": 0.8,
-  "base_time": 82.3,
+  "aggression": 0.90,
+  "tire_management": 0.70,
+  "fuel_saving": 0.60,
+  "wet_skill": 0.80,
+  "base_lap_time": 82.300,
   "image_path": "images/drivers/verstappen.jpg"
 }
+
 
